@@ -20,11 +20,24 @@
  */
 
 #include <lsp-plug.in/test-fw/utest.h>
+#include <lsp-plug.in/io/InBitStream.h>
+#include <lsp-plug.in/io/InMemoryStream.h>
 #include <lsp-plug.in/io/OutBitStream.h>
 #include <lsp-plug.in/io/OutMemoryStream.h>
 #include <lsp-plug.in/stdlib/string.h>
 
 using namespace lsp;
+
+namespace
+{
+    static const uint8_t test_data[] =
+    {
+        0x12, 0xcf, 0xa1, 0xcf, 0x19, 0x12, 0x12, 0x6d,
+        0x28, 0xa4, 0x51, 0x73, 0x15, 0xbf, 0xa7, 0xbd,
+        0xa8, 0xfd, 0xcf, 0xb2, 0xf1, 0xf1, 0xd0, 0x42,
+        0xe5, 0x8d, 0x05, 0x88, 0xf7, 0x32, 0x79, 0xe8
+    };
+}
 
 UTEST_BEGIN("runtime.io", bitstream)
 
@@ -33,39 +46,31 @@ UTEST_BEGIN("runtime.io", bitstream)
         io::OutBitStream obs;
         UTEST_ASSERT(obs.wrap(os, WRAP_NONE) == STATUS_OK);
 
-        static const uint8_t data[] =
-        {
-            0x12, 0xcf, 0xa1, 0xcf, 0x19, 0x12, 0x12, 0x6d,
-            0x28, 0xa4, 0x51, 0x73, 0x15, 0xbf, 0xa7, 0xbd,
-            0xa8, 0xfd, 0xcf, 0xb2, 0xf1, 0xf1, 0xd0, 0x42,
-            0xe5, 0x8d, 0x05, 0x88, 0xf7, 0x32, 0x79, 0xe8
-        };
-
         // Emit '9'
         UTEST_ASSERT(obs.writeb(true) == STATUS_OK);
+        UTEST_ASSERT(obs.writeb(false) == STATUS_OK);
         UTEST_ASSERT(obs.writev(false) == STATUS_OK);
-        UTEST_ASSERT(obs.writev(false) == STATUS_OK);
-        UTEST_ASSERT(obs.writeb(true) == STATUS_OK);
+        UTEST_ASSERT(obs.writev(true) == STATUS_OK);
 
         // 1-byte write
-        UTEST_ASSERT(obs.writev(uint8_t(0xce)) == STATUS_OK);                   // Emit 'ce'
-        UTEST_ASSERT(obs.writev(uint8_t(0xa5), 4) == STATUS_OK);                // Emit '5'
+        UTEST_ASSERT(obs.writev(uint8_t(0xce)) == STATUS_OK);                       // Emit 'ce'
+        UTEST_ASSERT(obs.writev(uint8_t(0xa5), 4) == STATUS_OK);                    // Emit '5'
 
         // 2-byte write
-        UTEST_ASSERT(obs.writev(uint16_t(0x1324)) == STATUS_OK);                // Emit '1324'
-        UTEST_ASSERT(obs.writev(uint16_t(0xfc4b), 12) == STATUS_OK);            // Emit 'c4b'
+        UTEST_ASSERT(obs.writev(uint16_t(0x1324)) == STATUS_OK);                    // Emit '1324'
+        UTEST_ASSERT(obs.writev(uint16_t(0xfc4b), 12) == STATUS_OK);                // Emit 'c4b'
 
         // 4-byte write
-        UTEST_ASSERT(obs.writev(uint32_t(0xa7cb329e)) == STATUS_OK);            // Emit 'a7cb329e'
-        UTEST_ASSERT(obs.writev(uint32_t(0x5a8c3679), 28) == STATUS_OK);        // Emit 'a8c3679'
+        UTEST_ASSERT(obs.writev(uint32_t(0xa7cb329e)) == STATUS_OK);                // Emit 'a7cb329e'
+        UTEST_ASSERT(obs.writev(uint32_t(0x5a8c3679), 28) == STATUS_OK);            // Emit 'a8c3679'
 
         // 8-byte write
-        UTEST_ASSERT(obs.writev(uint64_t(0xbf61cd168a7df102ULL)) == STATUS_OK); // Emit 'bf61cd168a7df102'
-        UTEST_ASSERT(obs.writev(uint64_t(0x3e561924d5993bf7), 60) == STATUS_OK);// Emit 'e561924d5993bf7'
+        UTEST_ASSERT(obs.writev(uint64_t(0xbf61cd168a7df102ULL)) == STATUS_OK);     // Emit 'bf61cd168a7df102'
+        UTEST_ASSERT(obs.writev(uint64_t(0x3e561924d5993bf7ULL), 60) == STATUS_OK); // Emit 'e561924d5993bf7'
 
         // Arrays
-        UTEST_ASSERT(obs.write(&data[0], 9) == 9);                              // Emit '12cfa1cf1912126d28'
-        UTEST_ASSERT(obs.bwrite(&data[9], 180) == 180);                         // Emit 'a4517315bfa7bda8fdcfb2f1f1d042e58d0588f732798'
+        UTEST_ASSERT(obs.write(&test_data[0], 9) == 9);                             // Emit '12cfa1cf1912126d28'
+        UTEST_ASSERT(obs.bwrite(&test_data[9], 180) == 180);                        // Emit 'a4517315bfa7bda8fdcfb2f1f1d042e58d0588f732798'
 
         // Emit 'b'
         UTEST_ASSERT(obs.writeb(true) == STATUS_OK);
@@ -73,10 +78,84 @@ UTEST_BEGIN("runtime.io", bitstream)
         UTEST_ASSERT(obs.writeb(true) == STATUS_OK);
         UTEST_ASSERT(obs.writeb(true) == STATUS_OK);
 
-        UTEST_ASSERT(obs.flush() == STATUS_OK);                                 // Emit '0'
-        UTEST_ASSERT(obs.writev(uint32_t(0x5ec9), 12) == STATUS_OK);            // Emit 'ec9'
+        UTEST_ASSERT(obs.flush() == STATUS_OK);                                     // Emit '0'
+        UTEST_ASSERT(obs.writev(uint32_t(0x5ec9), 12) == STATUS_OK);                // Emit 'ec9'
 
-        UTEST_ASSERT(obs.close() == STATUS_OK);                                 // Emit '0'
+        UTEST_ASSERT(obs.close() == STATUS_OK);                                     // Emit '0'
+    }
+
+    void test_read_bits(io::IInStream *is)
+    {
+        io::InBitStream ibs;
+        UTEST_ASSERT(ibs.wrap(is, WRAP_NONE) == STATUS_OK);
+
+        union
+        {
+            bool        b;
+            uint8_t     u8;
+            uint16_t    u16;
+            uint32_t    u32;
+            uint64_t    u64;
+        } v;
+
+        uint8_t data[sizeof(test_data)];
+
+        // Read '9'
+        UTEST_ASSERT(ibs.readb(&v.b) == 1);
+        UTEST_ASSERT(v.b == true);
+        UTEST_ASSERT(ibs.readb(&v.b) == 1);
+        UTEST_ASSERT(v.b == false);
+        UTEST_ASSERT(ibs.readv(&v.b) == 1);
+        UTEST_ASSERT(v.b == false);
+        UTEST_ASSERT(ibs.readv(&v.b) == 1);
+        UTEST_ASSERT(v.b == true);
+
+        // 1-byte reads
+        UTEST_ASSERT(ibs.readv(&v.u8) == 8);                                    // Read 'ce'
+        UTEST_ASSERT(v.u8 == 0xce);
+        UTEST_ASSERT(ibs.readv(&v.u8, 4) == 4);                                 // Read '5'
+        UTEST_ASSERT(v.u8 == 0x05);
+
+        // 2-byte reads
+        UTEST_ASSERT(ibs.readv(&v.u16) == 16);                                  // Read '1324'
+        UTEST_ASSERT(v.u16 == 0x1324);
+        UTEST_ASSERT(ibs.readv(&v.u16, 12) == 12);                              // Read 'c4b'
+        UTEST_ASSERT(v.u16 == 0x0c4b);
+
+        // 4-byte reads
+        UTEST_ASSERT(ibs.readv(&v.u32) == 32);                                  // Read 'a7cb329e'
+        UTEST_ASSERT(v.u32 == 0xa7cb329e);
+        UTEST_ASSERT(ibs.readv(&v.u32, 28) == 28);                              // Read 'a8c3679'
+        UTEST_ASSERT(v.u32 == 0x0a8c3679);
+
+        // 8-byte reads
+        UTEST_ASSERT(ibs.readv(&v.u64) == 64);                                  // Read 'bf61cd168a7df102'
+        UTEST_ASSERT(v.u64 == uint64_t(0xbf61cd168a7df102ULL));
+        UTEST_ASSERT(ibs.readv(&v.u64, 60) == 60);                              // Read 'e561924d5993bf7'
+        UTEST_ASSERT(v.u64 == uint64_t(0x0e561924d5993bf7ULL));
+
+        // Arrays
+        UTEST_ASSERT(ibs.read(&data[0], 9) == 9);                               // Read '12cfa1cf1912126d28'
+        UTEST_ASSERT(memcmp(&data[0], &test_data[0], 9) == 0);
+        UTEST_ASSERT(ibs.bread(&data[9], 180) == 180);                          // Read 'a4517315bfa7bda8fdcfb2f1f1d042e58d0588f732798'
+        UTEST_ASSERT(memcmp(&data[9], &test_data[9], 22) == 0);
+        UTEST_ASSERT(data[31] == (test_data[31] & 0x0f));
+
+        // Read tail
+        UTEST_ASSERT(ibs.readv(&v.u8) == 8);                                    // Read 'b0'
+        UTEST_ASSERT(v.u8 == 0xb0);
+        UTEST_ASSERT(ibs.readv(&v.u32) == 16);                                  // Read 'ec90'
+        UTEST_ASSERT(v.u32 == 0xec90);
+
+        // Check for EOF
+        UTEST_ASSERT(ibs.readb(&v.b) == -STATUS_EOF)
+        UTEST_ASSERT(ibs.readv(&v.b) == -STATUS_EOF)
+        UTEST_ASSERT(ibs.readv(&v.u8) == -STATUS_EOF)
+        UTEST_ASSERT(ibs.readv(&v.u16) == -STATUS_EOF)
+        UTEST_ASSERT(ibs.readv(&v.u32) == -STATUS_EOF)
+        UTEST_ASSERT(ibs.readv(&v.u64) == -STATUS_EOF)
+
+        UTEST_ASSERT(ibs.close() == STATUS_OK);
     }
 
     UTEST_MAIN
@@ -107,6 +186,13 @@ UTEST_BEGIN("runtime.io", bitstream)
         };
 
         test_write_bits(&oms);
+
+        const uint8_t *data = oms.data();
+        printf("data : ");
+        for (size_t i=0; i<oms.size(); ++i)
+            printf("%02x ", data[i]);
+        printf("\n");
+
         UTEST_ASSERT(oms.size() == sizeof(check));
 
         printf("check: ");
@@ -114,13 +200,10 @@ UTEST_BEGIN("runtime.io", bitstream)
             printf("%02x ", check[i]);
         printf("\n");
 
-        const uint8_t *data = oms.data();
-        printf("data : ");
-        for (size_t i=0; i<sizeof(check); ++i)
-            printf("%02x ", data[i]);
-        printf("\n");
-
         UTEST_ASSERT(memcmp(data, check, sizeof(check)) == 0);
+
+        io::InMemoryStream ims(oms.data(), oms.size());
+        test_read_bits(&ims);
 
 
         // Drop the array
